resolves #35. Remove GPU usage, add another positioning div to solve double scroll bug in Chrome retina

--- a/example/styles.css
+++ b/example/styles.css
@@ -357,9 +357,9 @@ th {
   min-height: 0;
   min-width: 0; }
   .custom-scroll .outer-container {
-    overflow: hidden;
-    position: relative;
-    transform: translateZ(0); }
+    overflow: hidden; }
+    .custom-scroll .outer-container .positioning {
+      position: relative; }
     .custom-scroll .outer-container:hover .custom-scrollbar {
       opacity: 1;
       transition-duration: 0.2s; }
